# KooixMail

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  duckmail.db  package.json
backend/: Cargo.toml  DESIGN.md  README.md
backend/src/: auth.rs  inbound.rs  lib.rs  main.rs  models.rs  routes.rs  smtp.rs  test_support.rs
backend/src/db/: attachments.rs  mailboxes.rs  messages.rs  mod.rs  runtime.rs  sessions.rs
backend/src/routes/: events.rs  mailboxes.rs  messages.rs  system.rs
frontend/: DESIGN.md  README.md  index.html  package.json  vite.config.ts
frontend/public/: llm-api-docs.txt
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx  types.ts
frontend/src/lib/: api.ts  storage.ts  theme.ts
legacy/next-remote/: middleware.ts  netlify.toml  next.config.mjs  pnpm-lock.yaml  tailwind.config.js
legacy/next-remote/app/: globals.css
legacy/next-remote/components/: account-info-banner.tsx  account-modal.tsx  domain-selector.tsx  empty-state.tsx  faq-section.tsx  feature-cards.tsx  header.tsx  login-modal.tsx  mercure-test.tsx  message-detail.tsx  message-list.tsx  provider-switch-warning.tsx  settings-panel.tsx  sidebar.tsx  update-notice-modal.tsx
legacy/next-remote/contexts/: api-provider-context.tsx  auth-context.tsx  mail-status-context.tsx
legacy/next-remote/hooks/: use-heroui-toast.ts  use-mail-checker.ts  use-mercure-sse.ts  use-smart-mail-checker.ts
legacy/next-remote/i18n/: request.ts
legacy/next-remote/lib/: api.ts
legacy/next-remote/messages/: en.json  zh.json
legacy/next-remote/public/: ads.txt
(+10 files in other folders)
